syntax = "proto3";
package order;

option go_package = "github.com/gonzabosio/transaction/services/proto/order";

service OrderService {
  rpc NewAccessToken(Client) returns (AccessToken) {};
  rpc NewOrder(Order) returns (Result) {};
  rpc GetOrderDetails(OrderDetailsRequest) returns (OrderDetails) {};
}

message Client { string clientAuth = 1; }

message AccessToken { string value = 1; };

message Order {
  string accessToken = 1;
  string currency = 2;
  string amount = 3;
};

message Result {
  string message = 1;
  string orderId = 2;
}

message OrderDetailsRequest {
  string id = 1;
  string accessToken = 2;
}

message PurchaseUnits {
  string amount = 1;
  string currency = 2;
  string payeeEmail = 3;
  string merchantId = 4;
}

message OrderDetails {
  string status = 1;
  string orderId = 2;
  string paymentUrl = 3;
  PurchaseUnits purchase = 4;
}